Package_Tools/include-C/Ubuntu_26.04/gtk-4.0/gdk/in_arbeit/h/gdkdisplay.h

/*
 * gdkdisplay.h
 *
 * Copyright 2001 Sun Microsystems Inc.
 *
 * Erwann Chenede <erwann.chenede@sun.com>
 *
 * This library is free software; you can redistribute it and/or
 * modify it under the terms of the GNU Library General Public
 * License as published by the Free Software Foundation; either
 * version 2 of the License, or (at your option) any later version.
 *
 * This library is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
 * Library General Public License for more details.
 *
 * You should have received a copy of the GNU Library General Public
 * License along with this library. If not, see <http://www.gnu.org/licenses/>.
 */

#pragma once

#if !defined (__GDK_H_INSIDE__) && !defined (GTK_COMPILATION)
#error "Only <gdk/gdk.h> can be included directly."
#endif

#include <gdk/gdktypes.h>
#include <gdk/gdkevents.h>
#include <gdk/gdkseat.h>
#include <gdk/gdkmonitor.h>



#define GDK_TYPE_DISPLAY              (gdk_display_get_type ())
#define GDK_DISPLAY(object)           (G_TYPE_CHECK_INSTANCE_CAST ((object), GDK_TYPE_DISPLAY, GdkDisplay))
#define GDK_IS_DISPLAY(object)        (G_TYPE_CHECK_INSTANCE_TYPE ((object), GDK_TYPE_DISPLAY))

extern
GType       gdk_display_get_type (void) ;
extern
GdkDisplay *gdk_display_open                (const char *display_name);

extern
const char * gdk_display_get_name         (GdkDisplay *display);

extern
gboolean    gdk_display_device_is_grabbed  (GdkDisplay  *display,
                                            GdkDevice   *device);
extern
void        gdk_display_beep               (GdkDisplay  *display);
extern
void        gdk_display_sync               (GdkDisplay  *display);
extern
void        gdk_display_flush              (GdkDisplay  *display);

extern
void        gdk_display_close                  (GdkDisplay  *display);
extern
gboolean    gdk_display_is_closed          (GdkDisplay  *display);

extern
gboolean    gdk_display_is_composited      (GdkDisplay  *display);
extern
gboolean    gdk_display_is_rgba            (GdkDisplay  *display);
extern
gboolean    gdk_display_supports_shadow_width (GdkDisplay *display);
extern
gboolean    gdk_display_supports_input_shapes (GdkDisplay    *display);

extern
gboolean    gdk_display_prepare_gl         (GdkDisplay  *self,
                                            GError     **error);
extern
GdkGLContext *gdk_display_create_gl_context(GdkDisplay  *self,
                                            GError     **error);

extern
GdkDisplay *gdk_display_get_default (void);

extern
GdkClipboard *          gdk_display_get_clipboard               (GdkDisplay     *display);
extern
GdkClipboard *          gdk_display_get_primary_clipboard       (GdkDisplay     *display);

extern //xxxxxGLIB_DEPRECATED_IN_4_10_FOR(gdk_toplevel_set_startup_id)
void     gdk_display_notify_startup_complete   (GdkDisplay    *display,
                                                const char    *startup_id);
extern //xxxxxGLIB_DEPRECATED_IN_4_10
const char * gdk_display_get_startup_notification_id (GdkDisplay *display);

extern
GdkAppLaunchContext *gdk_display_get_app_launch_context (GdkDisplay *display);

extern
GdkSeat * gdk_display_get_default_seat (GdkDisplay *display);

extern
GList   * gdk_display_list_seats       (GdkDisplay *display);

extern
GListModel * gdk_display_get_monitors          (GdkDisplay *self);
extern
GdkMonitor * gdk_display_get_monitor_at_surface (GdkDisplay *display,
                                                GdkSurface  *surface);

extern //xxxxxGLIB_DEPRECATED_IN_4_10
void      gdk_display_put_event  (GdkDisplay     *display,
                                  GdkEvent       *event);

extern
gboolean       gdk_display_map_keyval  (GdkDisplay    *display,
                                        guint          keyval,
                                        GdkKeymapKey **keys,
                                        int           *n_keys);

extern
gboolean       gdk_display_map_keycode (GdkDisplay    *display,
                                        guint          keycode,
                                        GdkKeymapKey **keys,
                                        guint        **keyvals,
                                        int           *n_entries);

extern
gboolean       gdk_display_translate_key (GdkDisplay      *display,
                                          guint            keycode,
                                          GdkModifierType  state,
                                          int              group,
                                          guint           *keyval,
                                          int             *effective_group,
                                          int             *level,
                                          GdkModifierType *consumed);

extern
gboolean     gdk_display_get_setting (GdkDisplay *display,
                                      const char *name,
                                      GValue     *value);

extern
GdkDmabufFormats *
             gdk_display_get_dmabuf_formats (GdkDisplay *display);


//////G_DEFINE_AUTOPTR_CLEANUP_FUNC   (GdkDisplay, g_object_unref)